--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=Travelgram , initial-scale=1.0">
   <title>Travelgram | Perfil de viagens</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-  
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, labore molestias! Optio totam, quod temporibus magnam odio blanditiis vitae magni voluptas, quis quos ea tempora in quisquam? Nihil, optio tempora.</p>
 </body>
 </html>
