--- a/index.html
+++ b/index.html
@@ -11,6 +11,28 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
+  <div class="bg-surface-color">
+
+    <nav class="container">
+      <a href="#" id="logo">
+        <img src="assets/Logo.svg" alt="logo">
+      </a>
+      <ul id="primary-menu">
+        <li>
+          <a href="#">
+            <img src="assets/icons/MagnifyingGlass.svg" alt="Ícone de lupa">
+          </a>
+        </li>
+        <li><a href="#">Explorer</a></li>
+        <li><a href="#">Minhas viagens</a></li>
+        <li><a href="#">
+          <img src="assets/Profile pic.png" alt="foto de perfil">
+        </a></li>
+    </nav>
+
+  </div>
+  <header>
+  </header>
 
 </body>
 </html>
