--- a/index.html
+++ b/index.html
@@ -60,7 +60,30 @@
         </ul>
       </div>
     </header>
-</div>
+  </div>
+  <main class="container">
+    <img src="/assets/images/Image 01.png" alt="...">
+    <img src="/assets/images/Image 02.png" alt="...">
+    <img src="/assets/images/Image 03.png" alt="...">
+    <img src="/assets/images/Image 04.png" alt="...">
+    <img src="/assets/images/Image 05.png" alt="...">
+    <img src="/assets/images/Image 06.png" alt="...">
+    <img src="/assets/images/Image 07.png" alt="...">
+    <img src="/assets/images/Image 08.png" alt="...">
+    <img src="/assets/images/Image 09.png" alt="...">
+    <img src="/assets/images/Image 10.png" alt="...">
+    <img src="/assets/images/Image 11.png" alt="...">
+    <img src="/assets/images/Image 12.png" alt="...">
+  </main>
+  <footer>
+    <div class="container">
+      <p>Termos de uso</p>
+      <ul>
+        <li><a href="#">Política de privacidade</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </div>
 
+  </footer>
 </body>
 </html>
