--- a/index.html
+++ b/index.html
@@ -75,14 +75,17 @@
     <img src="/assets/images/Image 11.png" alt="...">
     <img src="/assets/images/Image 12.png" alt="...">
   </main>
-  <footer>
-    <div class="container">
-      <p>Termos de uso</p>
-      <ul>
-        <li><a href="#">Política de privacidade</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
-    </div>
+  <footer class="container">
+    <span> 
+      Travelgram © 2024
+    </span>
+    <span>
+      termos de uso
+    </span>
+    <span>
+      política de privacidade
+    </span>
+
 
   </footer>
 </body>
